added footer background

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
     </section>
   </main>
   <!-- *footer start -->
-  <footer class="mt-5">
+  <footer class="mt-5 py-3 panda-bg-info">
     <p class="small text-center">
       &copy 2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.
     </p>
